# tensortrade-ng

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py  sonar-project.properties
.github/workflows/: build-and-test.yml  coverage-and-sonar.yml  documentation.yml  release.yml  test.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/agents/: overview.md  well_performing_agent.md
docs/source/examples/: overview.md  renderers_and_plotly_chart.md  setup_environment_tutorial.md
docs/source/overview/: getting_started.md
docs/source/tutorials/: jupyterlab.md  ray.md  setup_base_environment.ipynb  tutorial.ipynb
examples/: README.md  data_preparation_catboost.ipynb  requirements.txt  setup_environment_tutorial.ipynb  simple_training_environment.py  train_and_evaluate.ipynb
examples/data/: BTC_USDT_5m_20240601-20240731.csv
src/tensortrade/: __init__.py
src/tensortrade/env/: __init__.py  environment.py
src/tensortrade/env/interfaces/: __init__.py  stopper.py
src/tensortrade/env/observers/: __init__.py  abstract.py  default.py  intraday.py  simple.py  window.py
src/tensortrade/env/renderers/: __init__.py  abstract.py  file_logger.py  matplotlib_trading_chart.py  plotly_trading_chart.py  screen_logger.py  terminal_renderer.py  utils.py
src/tensortrade/env/stoppers/: max_loss_stopper.py
src/tensortrade/env/utils/: feed_controller.py  obs_state.py
src/tensortrade/pipeline/: __init__.py  pipeline.py
src/tensortrade/pipeline/transformers/: __init__.py  abstract.py  catboost_feature_importance.py  catboost_rfecv.py  correlation_absolute.py  correlation_threshold.py  delete_columns.py  lagging.py  lambda_transformer.py  lasso_feature_selection.py  mutual_information.py  scaling.py  univariate_feature_selection.py
tensortrade/: __init__.py
tensortrade/env/: __init__.py  environment.py
tensortrade/env/actions/: __init__.py  abstract.py  bsh.py  managed_risk_orders.py  simple_orders.py
tensortrade/env/default/: __init__.py  renderers.py
tensortrade/env/generic/: environment.py
tensortrade/env/generic/components/: observer.py
tensortrade/env/informers/: __init__.py  abstract.py  simple_informer.py
tensortrade/env/interfaces/: __init__.py  informer.py  observer.py  renderer.py
tensortrade/env/mixins/: scheme.py
tensortrade/env/observers/: __init__.py  default.py  intraday_observer.py  tensortrade_observer.py
tensortrade/env/renderers/: file_logger.py  matplotlib_trading_chart.py  plotly_trading_chart.py  screen_logger.py  utils.py
tensortrade/env/rewards/: __init__.py  abstract.py  pbr.py  risk_adjusted_returns.py  simple_profit.py
tensortrade/env/stoppers/: __init__.py  max_loss_stopper.py
tensortrade/env/utils/: __init__.py
tensortrade/oms/wallets/: portfolio.py
tests/tensortrade/unit/env/: test_env.py  test_observers.py  test_rewards.py
tests/tensortrade/unit/env/default/: test_observers.py
tests/tensortrade/unit/env/renderers/: terminal_renderer.py
tests/tensortrade/unit/env/rewards/: test_simple_profit.py
tests/tensortrade/unit/pipeline/: pipeline.py  test_pipeline.py
tests/tensortrade/unit/pipeline/transformers/: delete_columns.py  lagging.py  lambda_transformer.py  scaling.py  test_catboost_feature_importance.py  test_catboost_rfecv.py  test_correlation_absolute.py  test_correlation_threshold.py  test_delete_columns.py  test_lagging.py  test_lambda_transformer.py  test_lasso_feature_selection.py  test_mutual_information.py  test_scaling.py  test_univariate_feature_selector.py
