[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tensortrade-ng"
dynamic = ["version"]
dependencies = [
  "numpy>=2.1.0",
  "pandas>=2.2.2",
  "gymnasium>=0.29.1",
  "pyyaml>=6.0.2",
  "matplotlib>=3.9.2",
  "plotly>=5.23.0",
  "deprecated>=1.2.14"
]
requires-python = ">=3.12"
authors = [
  {name = "Simon Erhardt", email = "simon@erhardt.consulting"},
  {name = "Adam King", email = "adamjking3@gmail.com"},
  {name = "Matthew Brulhardt", email = "mwbrulhardt@gmail.com"}
]
maintainers = [
  {name = "Simon Erhardt", email = "simon@erhardt.consulting"}
]
description = "TensorTrade-NG: A reinforcement learning library for training, evaluating, and deploying robust trading agents."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["tensortrade", "ai", "machine learning", "artificial intelligence", "trading", "finance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: System :: Distributed Computing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
tests = [
  "ipython>=8.26.0",
  "pytest>=5.1.1",
  "pytest-cov>=5.0.0",
  "ta>=0.4.7"
]
docs = [
  "sphinx>=7.4.7",
  "sphinx_rtd_theme>=2.0.0",
  "sphinxcontrib-apidoc>=0.5.0",
  "nbsphinx>=0.9.5",
  "nbsphinx_link>=1.3.0",
  "recommonmark>=0.7.1",
  "sphinx-markdown-tables>=0.0.17",
  "ipython>=8.26.0"
]
jlab = [
  "ipython>=8.26.0",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.3",
  "stable_baselines3>=2.3.2",
  "ta>=0.11.0"
]

[project.urls]
Homepage = "https://tensortrade-ng.io"
Documentation = "https://tensortrade-ng.io"
Repository = "https://github.com/erhardtconsulting/tensortrade-ng.git"
Issues = "https://github.com/erhardtconsulting/tensortrade-ng/issues"

[tool.setuptools.packages.find]
exclude = ["junit"]

[tool.setuptools_scm]
version_file = "tensortrade/version.py"