[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tensortrade-ng"
dynamic = ["version"]
dependencies = [
  "numpy (>=1.26.4, <2)",
  "pandas>=2.1.0",
  "gymnasium>=0.29.1",
  "pyyaml>=6.0.2",
  "matplotlib>=3.9.2",
  "plotly>=5.23.0",
  "deprecated>=1.2.14",
  "scikit-learn>=1.5.1",
  "catboost>=1.2.5"
]
requires-python = ">=3.10"
authors = [
  {name = "Simon Erhardt", email = "simon@erhardt.consulting"},
  {name = "Adam King", email = "adamjking3@gmail.com"},
  {name = "Matthew Brulhardt", email = "mwbrulhardt@gmail.com"}
]
maintainers = [
  {name = "Simon Erhardt", email = "simon@erhardt.consulting"}
]
description = "TensorTrade-NG: A reinforcement learning library for training, evaluating, and deploying robust trading agents."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["tensortrade", "ai", "machine learning", "artificial intelligence", "trading", "finance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: System :: Distributed Computing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "hatch>=1.12.0",
  "hatch-vcs>=0.4.0",
  "tox>=4.18.0",
  "tensortrade-ng[test]",
  "tensortrade-ng[doc]",
  "tensortrade-ng[jlab]"
]
test = [
  "coverage>=7.6.1",
  "ipython>=8.26.0",
  "pytest>=5.1.1",
  "ta>=0.4.7"
]
doc = [
  "furo>=2024.8.6",
  "sphinx>=7.4.7",
  "sphinx-copybutton>=0.5.2",
  "sphinxcontrib-apidoc>=0.5.0",
  "nbsphinx>=0.9.5",
  "nbsphinx_link>=1.3.0",
  "recommonmark>=0.7.1",
  "sphinx-markdown-tables>=0.0.17",
  "ipython>=8.26.0",
  "sphinx-autobuild>=2024.4.16"
]
jlab = [
  "ipython>=8.26.0",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.3",
  "scikit_learn>=1.5.1",
  "stable_baselines3>=2.3.2",
  "ta>=0.11.0"
]

[project.urls]
Homepage = "https://tensortrade-ng.io"
Documentation = "https://tensortrade-ng.io"
Repository = "https://github.com/erhardtconsulting/tensortrade-ng.git"
Issues = "https://github.com/erhardtconsulting/tensortrade-ng/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/tensortrade"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tensortrade/__about__.py"

[tool.hatch.envs.docs]
python = "3.12"
features = [
  "doc"
]

[tool.hatch.envs.docs.scripts]
build = "python -m sphinx -M html docs/source docs/build"
serve = "python -m sphinx_autobuild docs/source docs/build"

[tool.hatch.envs.test]
features = ["test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.11", "3.10"]

[tool.hatch.envs.test.scripts]
run = "python -m pytest"
run-cov = "python -m coverage run -m pytest"
report-xml = "python -m coverage xml"

[tool.coverage.run]
omit = [
  "docs/**",
  "tests/**",
  "examples/**"
]

[tool.coverage.report]
fail_under = 75.0
show_missing = true

[tool.coverage.xml]
output = 'coverage.xml'